syntax = "proto3";

option csharp_namespace = "UserService.Grpc";

package userService;

service CheckUserService {
    rpc CheckUser (CheckUserRequest) returns (CheckUserResponse);
}

message CheckUserRequest {
    string userId = 1;
}

message CheckUserResponse {
    bool exists = 1;
}
